--- a/src/components/main/home.css
+++ b/src/components/main/home.css
@@ -150,7 +150,7 @@
     }
 
     .sec2 {
-        margin-top: 7vh;
+        /* margin-top: 7vh; */
 
         background-repeat: no-repeat;
         background-position: center;
